# langsmith-agent-lifecycle-workshop

./: pyproject.toml
workshop_modules/module_2/: section_1_baseline_evaluation.ipynb  section_3_advanced_evaluation.ipynb
