[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langsmith-agent-lifecycle-workshop"
version = "0.1.0"
description = "AI Engineering Lifecycle on LangSmith Platform - Workshop Series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain Core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=1.1.14",
    # LangGraph
    "langgraph>=0.2.0",
    # LangSmith
    "langsmith>=0.7.31",
    # RAG & Embeddings
    "langchain-huggingface>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers>=3.0.0",
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    # Utilities
    "python-dotenv>=1.2.2",
    "langgraph-cli[inmem]>=0.4.4",
    # Evaluation
    "agentevals>=0.0.9",
    "openevals>=0.0.9",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents", "deployments", "evaluators"]
